# UnifiedJsonWrapper.cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  conan.profile  conanfile.txt
App/: CMakeLists.txt
App/src/: main.cpp
Tests/: CMakeLists.txt  TestJsonWrapper.cpp
Wrappers/: CMakeLists.txt
Wrappers/Includes/Exceptions/: XJsonError.hpp
Wrappers/Includes/Implementations/: NlohmannJsonWrapper.hpp
Wrappers/Includes/Interfaces/: IJsonWrapper.hpp
Wrappers/Src/: NlohmannJsonWrapper.cpp
cmake/: static_analyzers.cmake
